# simple_neuron

./: layers.py  pyproject.toml  understanding.ipynb
src/: layer.py  layers.py  loss.py  metric.py  neuralnet.py  non_linearity.py  utils.py
tests/: test_layer.py  test_loss.py  test_metric.py  test_neuralnet.py  test_non_linearity.py  test_utils.py
