[tool.poetry]
name = "simple-neuron"
version = "0.1.0"
description = ""
authors = ["Vladimir <eremeevvv72@gmail.com>"]
readme = "README.md"
packages = [{include = "simple_neuron"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
matplotlib = "^3.6.1"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
