[tool.poetry]
name = "simple-neuron"
version = "0.1.0"
description = ""
authors = ["Vladimir <eremeevvv72@gmail.com>"]
readme = "README.md"
packages = [{include = "simple_neuron"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
